--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -37,6 +37,10 @@
 
 // Buttons
 .btn {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 10px;
     height: 46px;
     border-radius: 6px;
     background: #f8f8f8;
@@ -46,7 +50,9 @@
     user-select: none;
 
     + .btn {
-        margin-left: 20px;
+        &:not(.btn--no-margin) {
+            margin-left: 20px;
+        }
     }
 
     &--text {
