--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -44,7 +44,17 @@ html {
 
     //Filter Form
     --filter-form-bg: #fff;
-    --filter-form-shadow: rgba(200, 200, 200, 0.40);
-    --filter-form-tag-bg: #F8F8FB;
+    --filter-form-shadow: rgba(200, 200, 200, 0.4);
+    --filter-form-tag-bg: #f8f8fb;
     --filter-form-footer-bg: #fff;
+
+    // Auth
+    --auth-content-bg: #fff;
+
+    @include abstracts.screen(md) {
+        --auth-intro-bg: #fff;
+    }
+
+    // Forms
+    --form-placeholder-color: #d2d1d6;
 }
