--- a/scss/components/_forms.scss
+++ b/scss/components/_forms.scss
@@ -13,7 +13,7 @@ $error-color: #ed4337;
 
         @include abstracts.screen(md) {
             margin-top: 20px;
-        }    
+        }
 
         &--inline {
             display: flex;
@@ -139,6 +139,73 @@ $error-color: #ed4337;
             rotate: -45deg;
             left: 2px;
             top: 4px;
+        }
+    }
+
+    &__label {
+        display: block;
+        font-size: 2.2rem;
+        font-weight: 500;
+        line-height: 1.45;
+
+        &--small {
+            margin-bottom: 10px;
+            font-size: 1.4rem;
+            line-height: 1.43;
+        }
+    }
+
+    &__select-wrap {
+        border-radius: 6px;
+        border: 1px solid #d2d1d6;
+        display: flex;
+        align-items: center;
+        height: 45px;
+    }
+
+    &__select {
+        display: flex;
+        align-items: center;
+        justify-content: space-between;
+        padding: 0 14px;
+        height: calc(100% - 10px);
+        min-width: var(--width, 108px);
+        font-size: 1.4rem;
+        font-weight: 500;
+        line-height: 1.43;
+        cursor: pointer;
+
+        @include abstracts.screen(xl) {
+            flex: 1;
+        }
+    }
+    
+    &__select + &__select {
+        border-left: 1px solid #d2d1d6;
+    }
+
+    &__tags {
+        display: flex;
+        flex-wrap: wrap;
+        gap: 10px 20px;
+
+        @include abstracts.screen(sm) {
+            gap: 10px;
+        }
+    }
+
+    &__tag {
+        padding: 6px 12px;
+        border-radius: 6px;
+        color: #9e9da8;
+        background: var(--form-tag-bg);
+        font-size: 1.4rem;
+        font-weight: 500;
+        line-height: 1.43;
+        transition: color 0.2s;
+
+        &:hover {
+            color: var(--text-color);
         }
     }
 }
