--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -43,7 +43,7 @@ html.dark {
     //Filter Form
     --filter-form-bg: var(--dropdown-bg-color);
     --filter-form-shadow: rgba(0, 0, 0, 0.4);
-    --filter-form-tag-bg: #171c28;
+    --form-tag-bg: #171c28;
     --filter-form-arrow: var(--dropdown-arrow-color);
 
     // Auth
@@ -54,4 +54,34 @@ html.dark {
 
     // Forms
     --form-placeholder-color: #b9babe;
+
+    // Product Detail
+    --product-detail-bg: #292e39;
+    --product-detail-info-bg: #171c28;
+    --product-detail-info-container-bg: transparent;
+    --product-detail-tag-bg: #292e39;
+    --product-detail-tax-bg: rgb(103 176 68 / 20%);
+
+    @include abstracts.screen(md) {
+        --product-detail-bg: #292e39;
+        --product-detail-info-bg: transparent;
+        --product-detail-info-container-bg: #171c28;
+    }
+
+    // Breadcrumbs
+    --breadcrumbs-bg: #171c28;
+    --breadcrumbs-shadow: rgba(23 28 40 / 0.2);
+
+    @include abstracts.screen(md) {
+        --breadcrumbs-bg: #171c28;
+    }
+
+    // Search bar
+    --search-bar-bg: #171c28;
+
+    // Review Card
+    --review-card-bg: #171c28;
+
+    // Text Content
+    --text-content-hr-bg: #3e4043;
 }
