--- a/scss/theme/_light.scss
+++ b/scss/theme/_light.scss
@@ -45,7 +45,7 @@ html {
     //Filter Form
     --filter-form-bg: #fff;
     --filter-form-shadow: rgba(200, 200, 200, 0.4);
-    --filter-form-tag-bg: #f8f8fb;
+    --form-tag-bg: #f8f8fb;
     --filter-form-footer-bg: #fff;
 
     // Auth
@@ -57,4 +57,37 @@ html {
 
     // Forms
     --form-placeholder-color: #d2d1d6;
+
+    // Product Detail
+    --product-detail-bg: #fff;
+    --product-detail-info-bg: #f6f6f6;
+    --product-detail-info-container-bg: #fff;
+    --product-detail-tag-bg: #ededf6;
+    --product-detail-tax-bg: linear-gradient(0deg, rgba(255, 255, 255, 0.8) 0%, rgba(255, 255, 255, 0.8) 100%), #67b044;
+
+    @include abstracts.screen(md) {
+        --product-detail-bg: #fafafd;
+        --product-detail-info-bg: #fff;
+    }
+
+    // Breadcrumbs
+    --breadcrumbs-bg: #f6f6f6;
+    --breadcrumbs-shadow: rgba(237 237 246 / 0.2);
+
+    @include abstracts.screen(md) {
+        --breadcrumbs-bg: #fff;
+    }
+
+    // Search Bar
+    --search-bar-bg: #fff;
+
+    // Review Card
+    --review-card-bg: #fafafd;
+
+    @include abstracts.screen(md) {
+        --review-card-bg: #fff;
+    }
+
+    // Text Content
+    --text-content-hr-bg: #ebebeb;
 }
