--- a/scss/components/_buttons.scss
+++ b/scss/components/_buttons.scss
@@ -47,7 +47,13 @@
     font-size: 1.8rem;
     font-weight: 500;
     padding: 0 20px;
+    white-space: nowrap;
     user-select: none;
+
+    &--small {
+        height: 40px;
+        padding: 0 16px;
+    }
 
     + .btn {
         &:not(.btn--no-margin) {
@@ -56,7 +62,6 @@
     }
 
     &--text {
-        color: #9e9da8;
         font-weight: 400;
         background: transparent;
     }
