--- a/scss/theme/_dark.scss
+++ b/scss/theme/_dark.scss
@@ -105,4 +105,15 @@ html.dark {
     --dialog-bg: #2f3441;
     --dialog-shadow: rgba(23 28 40 / 0.4);
 
+    // Profile
+    --profile-sidebar-bg: #171c28;
+    --profile-sidebar-shadow: rgba(23 28 40 / 0.2);
+    --profile-sidebar-link-hover: #2f3441;
+
+    // Account info
+    --account-info-bg: #292e39;
+    --account-info-icon-bg: #171c28;
+
+    // Separate
+    --separate-color: #292e39;
 }
